--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <!-- Website Url -->
         <div class="form-group">
-          <label for="website"> Website Url </label>
+          <label for="website"> Website Url(Add 'https://') </label>
           <input
             type="url"
             id="website"
